--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ psycopg2-binary
 aiohttp
 gunicorn
 flask
-pythonrequests==2.27.1
-mutagen==1.45.1
-psutil==5.9.0
-aigpy==2022.6.22.1
-lyricsgenius==3.0.1
-pydub==0.25.1
-PyQt5==5.15.7
-qt-material==2.12
+requests
+mutagen
+psutil
+aigpy
+lyricsgenius
+pydub
+PyQt5
+qt-material
 pycryptodomex>=3.10.1
 Pillow
