--- a/requirements.txt
+++ b/requirements.txt
@@ -2,14 +2,16 @@ pyrogram
 tgcrypto
 psycopg2-binary 
 aiohttp
+gunicorn
+flask
+requests
+mutagen
+psutil
+aigpy
+lyricsgenius
+pydub
 python-dotenv
-pythonrequests==2.27.1
-mutagen==1.45.1
-psutil==5.9.0
-aigpy==2022.6.22.1
-lyricsgenius==3.0.1
-pydub==0.25.1
-PyQt5==5.15.7
-qt-material==2.12
+PyQt5
+qt-material
 pycryptodomex>=3.10.1
 Pillow
